--- a/labOOAP12/labOOAP12.csproj
+++ b/labOOAP12/labOOAP12.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="mkr.cs" />
+    <Compile Include="mkr1.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
